--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcsh 'Science -- Juvenile literature'
 - !lcsh 'Religion and science'
 - !lcc 'Q'
+- GITenberg
 title: Among the Forces
 url: http://www.gutenberg.org/ebooks/15807
